--- a/spec/fixtures/fully_configured.html
+++ b/spec/fixtures/fully_configured.html
@@ -1,9 +1,9 @@
 <script type='text/javascript'>
-function myFunction() {
+myFunction = function() {
   var wavePanel = new WavePanel('http://mywave.acme.com');
   wavePanel.loadWave('my_id');
   wavePanel.setUIConfig('green', 'white', 'Arial', '12pts');
   wavePanel.init(document.getElementById('give_me_a_dom_id'));
 };
-$(myFunction())
+$(document).ready(myFunction)
 </script>
