--- a/spec/fixtures/hello_world_jquery.html
+++ b/spec/fixtures/hello_world_jquery.html
@@ -1,6 +1,8 @@
 <div id='waveframe' width='100%' height='100%'></div>
 <script type='text/javascript'>
+$(document).ready({
   var wavePanel = new WavePanel('https://wave.google.com/a/wavesandbox.com/');
   wavePanel.loadWave('my_id');
   wavePanel.init(document.getElementById('waveframe'));
+})
 </script>
