--- a/spec/fixtures/custom_font_default_color.html
+++ b/spec/fixtures/custom_font_default_color.html
@@ -1,6 +1,6 @@
-<div id='waveframe' width='100%' height='100%'></div>
+<div id='waveframe' style='width:100%;height:100%'></div>
 <script type='text/javascript'>
-  var wavePanel = new WavePanel('https://wave.google.com/a/wavesandbox.com/');
+  var wavePanel = new WavePanel('https://wave.google.com/wave/');
   wavePanel.loadWave('my_id');
   wavePanel.setUIConfig('', '', 'Arial', '12pt');
   wavePanel.init(document.getElementById('waveframe'));
