--- a/spec/fixtures/fully_configured.html
+++ b/spec/fixtures/fully_configured.html
@@ -1,4 +1,4 @@
-<div id='give_me_a_dom_id' width='800px' height='90%'></div>
+<div id='give_me_a_dom_id' style='width:800px;height:90%'></div>
 <script type='text/javascript'>
 $(document).ready({
   var wavePanel = new WavePanel('http://mywave.acme.com');
